--- a/resources/css/azia.css
+++ b/resources/css/azia.css
@@ -8709,8 +8709,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin-bottom: 1px;
   font-size: 13px; }
 
-.select2-container--default .select2-selection--single {
-  background-color: #2a52be;
+.select2-container--default .select2-selection--single {  
   border-color: #cdd4e0;
   border-radius: 3px;
   height: 38px;
@@ -8732,8 +8731,7 @@ a.text-dark:hover, a.text-dark:focus {
     .select2-container--default .select2-selection--single .select2-selection__arrow b {
       margin-top: -3px; }
 
-.select2-container--default .select2-selection--multiple {
-  background-color: #2a52be;
+.select2-container--default .select2-selection--multiple {  
   border-color: #cdd4e0;
   border-radius: 0;
   min-height: 38px;
@@ -8769,11 +8767,8 @@ a.text-dark:hover, a.text-dark:focus {
 
 }
 
-.select2-container--default .select2-results__option[aria-selected="true"] {
-  background-color: #00308F; }
-
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #5b47fb; }
+  background-color: #3366ff; }
 
 .select2-container--default .select2-results > .select2-results__options {
   margin: 4px; }
@@ -8791,8 +8786,7 @@ a.text-dark:hover, a.text-dark:focus {
     display: none; }
 
 .select2-container--open .select2-selection--single,
-.select2-container--open .select2-selection--multiple {
-  background-color: #00308F;
+.select2-container--open .select2-selection--multiple {  
   border-color: #cdd4e0; }
 
 .select2-container--open .select2-dropdown--above {
@@ -8805,7 +8799,7 @@ a.text-dark:hover, a.text-dark:focus {
   top: 0; }
 
 .select2-dropdown {
-  background-color: #00cccc;
+  /* background-color: #00cccc; */
   border-color: #cdd4e0;
   z-index: 200; }
 
