--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,7 @@
 
 //Select 2
 @import "/node_modules/select2/dist/css/select2.css";
+
+//Datatables
+@import "/node_modules/datatables.net-select-dt/css/select.dataTables.min.css";
+@import "/node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css";
