--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,4 @@
 @import "/node_modules/datatables.net-select-dt/css/select.dataTables.min.css";
 @import "/node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css";
 
-// .bg-primary{
-//     background-color: #002244 !important;
-// }
+@import "./appLayout.scss";
