--- a/resources/sass/appLayout.scss
+++ b/resources/sass/appLayout.scss
@@ -48,6 +48,7 @@
     }
 }
 
-.readonly{
-    background-color: #d3d3d3;
+input[readonly], textarea[readonly],
+input[readonly]:focus, textarea[readonly]:focus{
+    background-color: #e5e5e5;
 }
