System roles enum, protected routes and quotes restriction
*Retrived quotes cannot be found on purchase ordes.
*Some routes are now protected for users without such permissions.
*System admin dashboard created.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,3 +14,26 @@ table.dataTable thead tr {
 td {
   word-wrap: break-word;
 }
+
+.tile{
+  height: 100px;
+}
+
+.tile:hover{
+  opacity: .9;
+}
+
+.tile#userRegistration{
+  background-color: #3d8bfd;
+  color: #fff;
+}
+
+.tile#roles{
+  background-color: #146c43;
+  color: #fff;
+}
+
+.tile#departments{
+  background-color: #1aa179;
+  color: #fff;
+}
